--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
           
           <h2>Competitions Awards</h2>
           <ul>
-            <li><p>Runner-up at Anytime Tracks Unweighted Group, MaxSAT Evaluation 2024</p></li>
-            <li><p>Third place at Anytime Tracks Weighted Group, MaxSAT Evaluation 2024</p></li>
+            <li><p>Runner-up at Unweighted Group, Anytime Tracks, MaxSAT Evaluation 2024</p></li>
+            <li><p>Third place at Weighted Group, Anytime Tracks, MaxSAT Evaluation 2024</p></li>
             <li><p>...</p></li>
           </ul>
 
