--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <a href="https://scholar.google.com/citations?view_op=search_authors&hl=zh-CN&mauthors=label:constraint_solving" target="_blank">Constraint Solving</a>, 
                 <a href="https://scholar.google.com/citations?view_op=search_authors&hl=zh-CN&mauthors=label:maxsat" target="_blank">Maximum Satisfiability (MaxSAT)</a><br />
                 <br />
-                <b>E-mail: </b> <a href="mailto:jiangmenghua@foxmail.com">jiangmenghua@foxmail.com</a> <br />
+                <b>E-mail: jiangmenghua AT m DOT scnu DOT edu DOT cn</b><br />
                 </p>
               </td>
             </tr>
