--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 <a href="https://ieeexplore.ieee.org/abstract/document/10580189" target="_blank">[paper]</a>
                 <a href="https://github.com/jmhmaxsat/RASLite">[code]</a><br />
                 <u>Menghua Jiang</u>, Yin Chen*<br />
-                <i>2024 27th International Conference on Computer Supported Cooperative Work in Design</i> (CSCWD 2024)<br />
+                <i>2024 27th International Conference on Computer Supported Cooperative Work in Design</i> (CSCWD 2024) 【CCF-C类会议】<br />
               </p>
             </li>
             <li style="margin-bottom: 20px;">
@@ -109,7 +109,7 @@
                 <a href="https://link.springer.com/chapter/10.1007/978-3-031-40289-0_21" target="_blank">[paper]</a>
                 <a href="https://github.com/whyte-yhy/SATLC" target="_blank">[code]</a><br />
                 Hanyi Yu, <u>Menghua Jiang</u>, Yin Chen*<br />
-                <i>The 16th International Conference on Knowledge Science, Engineering and Management</i> (KSEM 2023)<br />
+                <i>The 16th International Conference on Knowledge Science, Engineering and Management</i> (KSEM 2023) 【CCF-C类会议】<br />
               </p>
             </li>
         </ul>
