--- a/index.html
+++ b/index.html
@@ -96,6 +96,13 @@
           <ul>
             <li style="margin-bottom: 20px;">
               <p>
+                <b>SNRWLS: Improve (W)PMS Solver with Weighting Strategies Related to Number of Soft Clauses</b>
+                Shuhao Chen, <u>Menghua Jiang</u>, Yin Chen*<br />
+                <i>The 19th International Symposium on Theoretical Aspects of Software Engineering</i> (TASE 2025) 【CCF-C类会议，Accept Rate: 24.2%】<br />
+              </p>
+            </li>
+            <li style="margin-bottom: 20px;">
+              <p>
                 <b>RASLite: Enhancing (W)PMS Solvers Through Dynamic Initial Weight Approach</b>
                 <a href="https://ieeexplore.ieee.org/abstract/document/10580189" target="_blank">[paper]</a>
                 <a href="https://github.com/jmhmaxsat/RASLite">[code]</a><br />
