--- a/index.html
+++ b/index.html
@@ -98,8 +98,7 @@
               <p>
                 <b>SNRWLS: Improve (W)PMS Solver with Weighting Strategies Related to Number of Soft Clauses</b><br />
                 Shuhao Chen, <u>Menghua Jiang</u>, Yin Chen*<br />
-                <i>The 19th International Symposium on Theoretical Aspects of Software Engineering</i> (TASE 2025)<br />
-                <i>CCF-C类会议，Accept Rate: 24.2%<br />
+                <i>The 19th International Symposium on Theoretical Aspects of Software Engineering</i> (TASE 2025) 【CCF-C类会议，Accept Rate: 24.2%】<br />
               </p>
             </li>
             <li style="margin-bottom: 20px;">
