--- a/index.html
+++ b/index.html
@@ -96,27 +96,30 @@
           <ul>
             <li style="margin-bottom: 20px;">
               <p>
-                <b>SNRWLS: Improve (W)PMS Solver with Weighting Strategies Related to Number of Soft Clauses</b><br />
+                SNRWLS: Improve (W)PMS Solver with Weighting Strategies Related to Number of Soft Clauses<br />
                 Shuhao Chen, <u>Menghua Jiang</u>, Yin Chen*<br />
-                <i>The 19th International Symposium on Theoretical Aspects of Software Engineering</i> (TASE 2025) 【CCF-C类会议，Acceptance Rate: 24.2%】<br />
+                <i>The 19th International Symposium on Theoretical Aspects of Software Engineering</i> (TASE 2025) <br />
+                (CCF-C类会议，Acceptance Rate: 24.2%) <br />
               </p>
             </li>
             <li style="margin-bottom: 20px;">
               <p>
-                <b>RASLite: Enhancing (W)PMS Solvers Through Dynamic Initial Weight Approach</b>
+                RASLite: Enhancing (W)PMS Solvers Through Dynamic Initial Weight Approach
                 <a href="https://ieeexplore.ieee.org/abstract/document/10580189" target="_blank">[paper]</a>
                 <a href="https://github.com/jmhmaxsat/RASLite">[code]</a><br />
                 <u>Menghua Jiang</u>, Yin Chen*<br />
-                <i>2024 27th International Conference on Computer Supported Cooperative Work in Design</i> (CSCWD 2024) 【CCF-C类会议】<br />
+                <i>2024 27th International Conference on Computer Supported Cooperative Work in Design</i> (CSCWD 2024) <br />
+                (CCF-C类会议) <br />
               </p>
             </li>
             <li style="margin-bottom: 20px;">
               <p>
-                <b>Heavy Weighting for Potential Important Clauses</b>
+                Heavy Weighting for Potential Important Clauses
                 <a href="https://link.springer.com/chapter/10.1007/978-3-031-40289-0_21" target="_blank">[paper]</a>
                 <a href="https://github.com/whyte-yhy/SATLC" target="_blank">[code]</a><br />
                 Hanyi Yu, <u>Menghua Jiang</u>, Yin Chen*<br />
-                <i>The 16th International Conference on Knowledge Science, Engineering and Management</i> (KSEM 2023) 【CCF-C类会议】<br />
+                <i>The 16th International Conference on Knowledge Science, Engineering and Management</i> (KSEM 2023) <br />
+                (CCF-C类会议) <br />
               </p>
             </li>
         </ul>
