--- a/index.html
+++ b/index.html
@@ -103,9 +103,8 @@
               </p>
             </li>
             <li style="margin-bottom: 20px;">
-              <p>
-                RASLite: Enhancing (W)PMS Solvers Through Dynamic Initial Weight Approach
-                <a href="https://ieeexplore.ieee.org/abstract/document/10580189" target="_blank">[paper]</a>
+              <p>                
+                <a href="https://ieeexplore.ieee.org/abstract/document/10580189" target="_blank">RASLite: Enhancing (W)PMS Solvers Through Dynamic Initial Weight Approach</a>
                 <a href="https://github.com/jmhmaxsat/RASLite">[code]</a><br />
                 <u>Menghua Jiang</u>, Yin Chen*<br />
                 <i>2024 27th International Conference on Computer Supported Cooperative Work in Design</i> (CSCWD 2024) <br />
@@ -114,8 +113,7 @@
             </li>
             <li style="margin-bottom: 20px;">
               <p>
-                Heavy Weighting for Potential Important Clauses
-                <a href="https://link.springer.com/chapter/10.1007/978-3-031-40289-0_21" target="_blank">[paper]</a>
+                <a href="https://link.springer.com/chapter/10.1007/978-3-031-40289-0_21" target="_blank">Heavy Weighting for Potential Important Clauses</a>
                 <a href="https://github.com/whyte-yhy/SATLC" target="_blank">[code]</a><br />
                 Hanyi Yu, <u>Menghua Jiang</u>, Yin Chen*<br />
                 <i>The 16th International Conference on Knowledge Science, Engineering and Management</i> (KSEM 2023) <br />
