--- a/index.html
+++ b/index.html
@@ -96,14 +96,14 @@
           <ul>
             <li style="margin-bottom: 20px;">
               <p>
-                <span style="color: #FF0000;">SNRWLS: Improve (W)PMS Solver with Weighting Strategies Related to Number of Soft Clauses</span>
+                <span style="color: #FF0000;">SNRWLS: Improve (W)PMS Solver with Weighting Strategies Related to Number of Soft Clauses</span><br />
                 Shuhao Chen, <u>Menghua Jiang</u>, Yin Chen*<br />
                 <i>The 19th International Symposium on Theoretical Aspects of Software Engineering</i> (TASE 2025) 【CCF-C类会议，Acceptance Rate: 24.2%】<br />
               </p>
             </li>
             <li style="margin-bottom: 20px;">
               <p>                
-                <b>RASLite: Enhancing (W)PMS Solvers Through Dynamic Initial Weight Approach</b>
+                <span style="color: #FF0000;">RASLite: Enhancing (W)PMS Solvers Through Dynamic Initial Weight Approach</span>
                 <a href="https://ieeexplore.ieee.org/abstract/document/10580189" target="_blank">[paper]</a>
                 <a href="https://github.com/jmhmaxsat/RASLite">[code]</a><br />
                 <u>Menghua Jiang</u>, Yin Chen*<br />
@@ -112,7 +112,7 @@
             </li>
             <li style="margin-bottom: 20px;">
               <p>
-                <b>Heavy Weighting for Potential Important Clauses</b>
+                <span style="color: #FF0000;">Heavy Weighting for Potential Important Clauses</span>
                 <a href="https://link.springer.com/chapter/10.1007/978-3-031-40289-0_21" target="_blank">[paper]</a>
                 <a href="https://github.com/whyte-yhy/SATLC" target="_blank">[code]</a><br />
                 Hanyi Yu, <u>Menghua Jiang</u>, Yin Chen*<br />
