--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
             </li>
             <li style="margin-bottom: 20px;">
               <p>
-                <span style="color: #FF0000;">Heavy Weighting for Potential Important Clauses</span>
+                <span style="color: #800080;">Heavy Weighting for Potential Important Clauses</span>
                 <a href="https://link.springer.com/chapter/10.1007/978-3-031-40289-0_21" target="_blank">[paper]</a>
                 <a href="https://github.com/whyte-yhy/SATLC" target="_blank">[code]</a><br />
                 Hanyi Yu, <u>Menghua Jiang</u>, Yin Chen*<br />
