--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             </li>
             <li style="margin-bottom: 20px;">
               <p>                
-                <span style="color: #800080;">RASLite: Enhancing (W)PMS Solvers Through Dynamic Initial Weight Approach</span>
+                RASLite: Enhancing (W)PMS Solvers Through Dynamic Initial Weight Approach
                 <a href="https://ieeexplore.ieee.org/abstract/document/10580189" target="_blank">[paper]</a>
                 <a href="https://github.com/jmhmaxsat/RASLite">[code]</a><br />
                 <u>Menghua Jiang</u>, Yin Chen*<br />
