--- a/index.html
+++ b/index.html
@@ -96,14 +96,14 @@
           <ul>
             <li style="margin-bottom: 20px;">
               <p>
-                <span style="color: ​​#A8A8A8​​;">SNRWLS: Improve (W)PMS Solver with Weighting Strategies Related to Number of Soft Clauses</span><br />
+                <span style="color: ​​#800080​​;">SNRWLS: Improve (W)PMS Solver with Weighting Strategies Related to Number of Soft Clauses</span><br />
                 Shuhao Chen, <u>Menghua Jiang</u>, Yin Chen*<br />
                 <i>The 19th International Symposium on Theoretical Aspects of Software Engineering</i> (TASE 2025) 【CCF-C类会议，Acceptance Rate: 24.2%】<br />
               </p>
             </li>
             <li style="margin-bottom: 20px;">
               <p>                
-                RASLite: Enhancing (W)PMS Solvers Through Dynamic Initial Weight Approach
+                <span style="color: #800080;">RASLite: Enhancing (W)PMS Solvers Through Dynamic Initial Weight Approach</span>
                 <a href="https://ieeexplore.ieee.org/abstract/document/10580189" target="_blank">[paper]</a>
                 <a href="https://github.com/jmhmaxsat/RASLite">[code]</a><br />
                 <u>Menghua Jiang</u>, Yin Chen*<br />
