--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
           <ul>
             <li style="margin-bottom: 20px;">
               <p>
-                <span style="color: ​​#800080​​;">SNRWLS: Improve (W)PMS Solver with Weighting Strategies Related to Number of Soft Clauses</span><br />
+                <span style="color: #800080;">SNRWLS: Improve (W)PMS Solver with Weighting Strategies Related to Number of Soft Clauses</span><br />
                 Shuhao Chen, <u>Menghua Jiang</u>, Yin Chen*<br />
                 <i>The 19th International Symposium on Theoretical Aspects of Software Engineering</i> (TASE 2025) 【CCF-C类会议，Acceptance Rate: 24.2%】<br />
               </p>
