--- a/index.html
+++ b/index.html
@@ -103,11 +103,12 @@
             </li>
             <li style="margin-bottom: 20px;">
               <p>                
-                [RASLite: Enhancing (W)PMS Solvers Through Dynamic Initial Weight Approach]</span>
+                <span style="color: #800080;">RASLite: Enhancing (W)PMS Solvers Through Dynamic Initial Weight Approach]</span>
                 <a href="https://ieeexplore.ieee.org/abstract/document/10580189" target="_blank">[paper]</a>
                 <a href="https://github.com/jmhmaxsat/RASLite">[code]</a><br />
                 <u>Menghua Jiang</u>, Yin Chen*<br />
-                <i>2024 27th International Conference on Computer Supported Cooperative Work in Design</i> (CSCWD 2024) 【CCF-C类会议】<br />
+                <i>2024 27th International Conference on Computer Supported Cooperative Work in Design</i> (CSCWD 2024)<br />
+                CCF-C类会议<br />
               </p>
             </li>
             <li style="margin-bottom: 20px;">
