--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
           <ul>
             <li style="margin-bottom: 20px;">
               <p>
-                <span style="color: #800080;">SNRWLS: Improve (W)PMS Solver with Weighting Strategies Related to Number of Soft Clauses</span><br />
+                <b><span style="color: #800080;">SNRWLS: Improve (W)PMS Solver with Weighting Strategies Related to Number of Soft Clauses</b></span><br />
                 Shuhao Chen, <u>Menghua Jiang</u>, Yin Chen*<br />
                 <i>The 19th International Symposium on Theoretical Aspects of Software Engineering</i> (TASE 2025)<br />
                 CCF-C类会议，Acceptance Rate: 24.2%
@@ -114,7 +114,7 @@
             </li>
             <li style="margin-bottom: 20px;">
               <p>
-                <span style="color: #800080;">Heavy Weighting for Potential Important Clauses</span>
+                <b><span style="color: #800080;">Heavy Weighting for Potential Important Clauses</b></span>
                 <a href="https://link.springer.com/chapter/10.1007/978-3-031-40289-0_21" target="_blank">[paper]</a>
                 <a href="https://github.com/whyte-yhy/SATLC" target="_blank">[code]</a><br />
                 Hanyi Yu, <u>Menghua Jiang</u>, Yin Chen*<br />
