--- a/index.html
+++ b/index.html
@@ -96,6 +96,15 @@
           <ul>
             <li style="margin-bottom: 20px;">
               <p>
+                <b><span style="color: #800080;">Improving Local Search for Weighted Partial MaxSAT by Initializing with Historical Information</b></span><br />
+                <u>Menghua Jiang</u>, Rui Zhang, Yin Chen*<br />
+                <i>The 31st International Computing and Combinatorics Conference</i> (COCOON 2025)<br />
+                CCF-B类会议，Acceptance Rate: 28.3%
+              </p>
+            </li>
+            
+            <li style="margin-bottom: 20px;">
+              <p>
                 <b><span style="color: #800080;">SNRWLS: Improve (W)PMS Solver with Weighting Strategies Related to Number of Soft Clauses</b></span><br />
                 Shuhao Chen, <u>Menghua Jiang</u>, Yin Chen*<br />
                 <i>The 19th International Symposium on Theoretical Aspects of Software Engineering</i> (TASE 2025)<br />
