--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             <li style="margin-bottom: 20px;">
               <p>
                 <b><span style="color: #800080;">Improving Local Search for Weighted Partial MaxSAT by Initializing with Historical Information</b></span><br />
-                <u>Menghua Jiang</u>, Rui Zhang, Yin Chen*<br />
+                <u><b>Menghua Jiang</b></u>, Rui Zhang, Yin Chen*<br />
                 <i>The 31st International Computing and Combinatorics Conference</i> (COCOON 2025)<br />
                 CCF-B类会议，Acceptance Rate: 28.3%
               </p>
@@ -106,7 +106,7 @@
             <li style="margin-bottom: 20px;">
               <p>
                 <b><span style="color: #800080;">SNRWLS: Improve (W)PMS Solver with Weighting Strategies Related to Number of Soft Clauses</b></span><br />
-                Shuhao Chen, <u>Menghua Jiang</u>, Yin Chen*<br />
+                Shuhao Chen, <b>Menghua Jiang</b>, Yin Chen*<br />
                 <i>The 19th International Symposium on Theoretical Aspects of Software Engineering</i> (TASE 2025)<br />
                 CCF-C类会议，Acceptance Rate: 24.2%
               </p>
