--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             <li style="margin-bottom: 20px;">
               <p>
                 <b><span style="color: #800080;">Improving Local Search for Weighted Partial MaxSAT by Initializing with Historical Information</b></span><br />
-                <u>Menghua Jiang</u>, Rui Zhang, Yin Chen*<br />
+                <u><span style="color: red;">Menghua Jiang</span></u>, Rui Zhang, Yin Chen*<br />
                 <i>The 31st International Computing and Combinatorics Conference</i> (COCOON 2025)<br />
                 CCF-B类会议，Acceptance Rate: 28.3%
               </p>
