--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             <li style="margin-bottom: 20px;">
               <p>
                 <b><span style="color: #800080;">SNRWLS: Improve (W)PMS Solver with Weighting Strategies Related to Number of Soft Clauses</b></span><br />
-                Shuhao Chen, <span style="color: #8e2323;">Menghua Jiang</span>, Yin Chen*<br />
+                Shuhao Chen, <span style="color: #800020;">Menghua Jiang</span>, Yin Chen*<br />
                 <i>The 19th International Symposium on Theoretical Aspects of Software Engineering</i> (TASE 2025)<br />
                 CCF-C类会议，Acceptance Rate: 24.2%
               </p>
@@ -117,7 +117,7 @@
                 <b><span style="color: #800080;">RASLite: Enhancing (W)PMS Solvers Through Dynamic Initial Weight Approach</b></span>
                 <a href="https://ieeexplore.ieee.org/abstract/document/10580189" target="_blank">[paper]</a>
                 <a href="https://github.com/jmhmaxsat/RASLite">[code]</a><br />
-                <u>Menghua Jiang</u>, Yin Chen*<br />
+                <u><span style="color: #8B0000;">Menghua Jiang</span></u>, Yin Chen*<br />
                 <i>2024 27th International Conference on Computer Supported Cooperative Work in Design</i> (CSCWD 2024)<br />
                 CCF-C类会议
               </p>
