--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
           <!-- 竞赛获奖 -->
           <h2>Competitions Awards</h2>
           <ul>
-            <li><p>Runner-up at Unweighted Group, Anytime Tracks, MaxSAT Evaluation 2024</p></li>
-            <li><p>Third place at Weighted Group, Anytime Tracks, MaxSAT Evaluation 2024</p></li>
+            <li><p>Runner-up in the Unweighted Anytime Track, MaxSAT Evaluation 2024</p></li>
+            <li><p>Third place in the Weighted Anytime Track, MaxSAT Evaluation 2024</p></li>
             <li><p>...</p></li>
           </ul>
 
