--- a/index.html
+++ b/index.html
@@ -96,6 +96,13 @@
           <ul>
             <li style="margin-bottom: 20px;">
               <p>
+                <b><span style="color: #800080;">Enhancing Local Search for MaxSAT with Deep Differentiation Clause Weighting</b></span><br />
+                <u><span style="color: #8B0000;">Menghua Jiang</span></u>, Haokai Gao, Shuhao Chen, Yin Chen*<br />
+              </p>
+            </li>
+            
+            <li style="margin-bottom: 20px;">
+              <p>
                 <b><span style="color: #800080;">Improving Local Search for Weighted Partial MaxSAT by Initializing with Historical Information</b></span><br />
                 <u><span style="color: #8B0000;">Menghua Jiang</span></u>, Rui Zhang, Yin Chen*<br />
                 <i>The 31st International Computing and Combinatorics Conference</i> (COCOON 2025)<br />
