--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
               <p>
                 <b><span style="color: #800080;">Enhancing Local Search for MaxSAT with Deep Differentiation Clause Weighting</b></span><br />
                 <u><span style="color: #8B0000;">Menghua Jiang</span></u>, Haokai Gao, Shuhao Chen, Yin Chen*<br />
+                Under Review
               </p>
             </li>
             
