--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                 <b><span style="color: #800080;">Heavy Weighting for Potential Important Clauses</b></span>
                 <a href="https://link.springer.com/chapter/10.1007/978-3-031-40289-0_21" target="_blank">[paper]</a>
                 <a href="https://github.com/whyte-yhy/SATLC" target="_blank">[code]</a><br />
-                Hanyi Yu, <u><span style="color: #8B0000;">Menghua Jiang</span></u>, Yin Chen*<br />
+                Hanyi Yu, <u><span style="color: #500000;">Menghua Jiang</span></u>, Yin Chen*<br />
                 <i>The 16th International Conference on Knowledge Science, Engineering and Management</i> (KSEM 2023)<br />
                 CCF-C类会议
               </p>
