--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             <li style="margin-bottom: 20px;">
               <p>
                 <b><span style="color: #800080;">SNRWLS: Improve (W)PMS Solver with Weighting Strategies Related to Number of Soft Clauses</b></span><br />
-                Shuhao Chen, <u><span style="color: #8B0000;">Menghua Jiang</span></u>, Yin Chen*<br />
+                Shuhao Chen, <u><span style="color: #007BFF;">Menghua Jiang</span></u>, Yin Chen*<br />
                 <i>The 19th International Symposium on Theoretical Aspects of Software Engineering</i> (TASE 2025)<br />
                 CCF-C类会议，Acceptance Rate: 24.2%
               </p>
@@ -126,7 +126,7 @@
                 <b><span style="color: #800080;">RASLite: Enhancing (W)PMS Solvers Through Dynamic Initial Weight Approach</b></span>
                 <a href="https://ieeexplore.ieee.org/abstract/document/10580189" target="_blank">[paper]</a>
                 <a href="https://github.com/jmhmaxsat/RASLite">[code]</a><br />
-                <u><span style="color: #8B0000;">Menghua Jiang</span></u>, Yin Chen*<br />
+                <u><span style="color: #1E90FF;">Menghua Jiang</span></u>, Yin Chen*<br />
                 <i>2024 27th International Conference on Computer Supported Cooperative Work in Design</i> (CSCWD 2024)<br />
                 CCF-C类会议
               </p>
@@ -137,7 +137,7 @@
                 <b><span style="color: #800080;">Heavy Weighting for Potential Important Clauses</b></span>
                 <a href="https://link.springer.com/chapter/10.1007/978-3-031-40289-0_21" target="_blank">[paper]</a>
                 <a href="https://github.com/whyte-yhy/SATLC" target="_blank">[code]</a><br />
-                Hanyi Yu, <u><span style="color: #500000;">Menghua Jiang</span></u>, Yin Chen*<br />
+                Hanyi Yu, <u><span style="color: #0000FF;">Menghua Jiang</span></u>, Yin Chen*<br />
                 <i>The 16th International Conference on Knowledge Science, Engineering and Management</i> (KSEM 2023)<br />
                 CCF-C类会议
               </p>
