--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
               <p>
                 <b><span style="color: #800080;">Improving Local Search for Weighted Partial MaxSAT by Initializing with Historical Information</b></span>
                 <a href="https://github.com/jmhmaxsat/HistLS">[code]</a><br />
-                <u><span style="color: #8B0000;">Menghua Jiang</span></u>, Rui Zhang, Yin Chen*<br />
+                <u><span style="color: #0000FF;">Menghua Jiang</span></u>, Rui Zhang, Yin Chen*<br />
                 <i>The 31st International Computing and Combinatorics Conference</i> (COCOON 2025)<br />
                 CCF-B类会议，Acceptance Rate: 28.3%
               </p>
@@ -115,7 +115,7 @@
             <li style="margin-bottom: 20px;">
               <p>
                 <b><span style="color: #800080;">SNRWLS: Improve (W)PMS Solver with Weighting Strategies Related to Number of Soft Clauses</b></span><br />
-                Shuhao Chen, <u><span style="color: #007BFF;">Menghua Jiang</span></u>, Yin Chen*<br />
+                Shuhao Chen, <span style="color: #0000FF;">Menghua Jiang</span>, Yin Chen*<br />
                 <i>The 19th International Symposium on Theoretical Aspects of Software Engineering</i> (TASE 2025)<br />
                 CCF-C类会议，Acceptance Rate: 24.2%
               </p>
@@ -126,7 +126,7 @@
                 <b><span style="color: #800080;">RASLite: Enhancing (W)PMS Solvers Through Dynamic Initial Weight Approach</b></span>
                 <a href="https://ieeexplore.ieee.org/abstract/document/10580189" target="_blank">[paper]</a>
                 <a href="https://github.com/jmhmaxsat/RASLite">[code]</a><br />
-                <u><span style="color: #1E90FF;">Menghua Jiang</span></u>, Yin Chen*<br />
+                <u><span style="color: #0000FF;">Menghua Jiang</span></u>, Yin Chen*<br />
                 <i>2024 27th International Conference on Computer Supported Cooperative Work in Design</i> (CSCWD 2024)<br />
                 CCF-C类会议
               </p>
