--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
               <p>
                 <b><span style="color: #800080;">Improving Local Search for Weighted Partial MaxSAT by Initializing with Historical Information</b></span>
                 <a href="https://github.com/jmhmaxsat/HistLS">[code]</a><br />
-                <span style="color: #0000FF;">Menghua Jiang</span>, Rui Zhang, Yin Chen*<br />
+                <span style="color: #008000;">Menghua Jiang</span>, Rui Zhang, Yin Chen*<br />
                 <i>The 31st International Computing and Combinatorics Conference</i> (COCOON 2025)<br />
                 CCF-B类会议，Acceptance Rate: 28.3%
               </p>
@@ -115,7 +115,7 @@
             <li style="margin-bottom: 20px;">
               <p>
                 <b><span style="color: #800080;">SNRWLS: Improve (W)PMS Solver with Weighting Strategies Related to Number of Soft Clauses</b></span><br />
-                Shuhao Chen, <span style="color: #0000FF;">Menghua Jiang</span>, Yin Chen*<br />
+                Shuhao Chen, <span style="color: #008000;">Menghua Jiang</span>, Yin Chen*<br />
                 <i>The 19th International Symposium on Theoretical Aspects of Software Engineering</i> (TASE 2025)<br />
                 CCF-C类会议，Acceptance Rate: 24.2%
               </p>
@@ -137,7 +137,7 @@
                 <b><span style="color: #800080;">Heavy Weighting for Potential Important Clauses</b></span>
                 <a href="https://link.springer.com/chapter/10.1007/978-3-031-40289-0_21" target="_blank">[paper]</a>
                 <a href="https://github.com/whyte-yhy/SATLC" target="_blank">[code]</a><br />
-                Hanyi Yu, <span style="color: #4CAF50;">Menghua Jiang</span>, Yin Chen*<br />
+                Hanyi Yu, <span style="color: #008000;">Menghua Jiang</span>, Yin Chen*<br />
                 <i>The 16th International Conference on Knowledge Science, Engineering and Management</i> (KSEM 2023)<br />
                 CCF-C类会议
               </p>
