--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             
             <li style="margin-bottom: 20px;">
               <p>
-                <b><span style="color: #800080;">Improving Local Search for Weighted Partial MaxSAT by Initializing with Historical Information</b></span>
+                <b>Improving Local Search for Weighted Partial MaxSAT by Initializing with Historical Information</b>
                 <a href="https://github.com/jmhmaxsat/HistLS">[code]</a><br />
                 <span style="color: #0000FF;">Menghua Jiang</span>, Rui Zhang, Yin Chen*<br />
                 <i>The 31st International Computing and Combinatorics Conference</i> (COCOON 2025)<br />
