--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
           <ul>
             <li style="margin-bottom: 20px;">
               <p>
-                <b><span style="color: #800080;">Enhancing Local Search for MaxSAT with Deep Differentiation Clause Weighting</b></span><br />
+                <b>Enhancing Local Search for MaxSAT with Deep Differentiation Clause Weighting</b><br />
                 <span style="color: #0000FF;">Menghua Jiang</span>, Haokai Gao, Shuhao Chen, Yin Chen*<br />
                 Under Review
               </p>
@@ -106,7 +106,7 @@
               <p>
                 <b>Improving Local Search for Weighted Partial MaxSAT by Initializing with Historical Information</b>
                 <a href="https://github.com/jmhmaxsat/HistLS">[code]</a><br />
-                <span style="color: #0000FF;">Menghua Jiang</span>, Rui Zhang, Yin Chen*<br />
+                <span style="color: #800080;">Menghua Jiang</span>, Rui Zhang, Yin Chen*<br />
                 <i>The 31st International Computing and Combinatorics Conference</i> (COCOON 2025)<br />
                 CCF-B类会议，Acceptance Rate: 28.3%
               </p>
