--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             <li style="margin-bottom: 20px;">
               <p>
                 <b><span style="color: #800080;">Improving Local Search for Weighted Partial MaxSAT by Initializing with Historical Information</span></b>
-                <a href="https://github.com/jmhmaxsat/HistLS">[code]</a><br />
+                <b><a href="https://github.com/jmhmaxsat/HistLS">[code]</a><br /></b>
                 <span style="color: #0000FF;">Menghua Jiang</span>, Rui Zhang, Yin Chen*<br />
                 <i>The 31st International Computing and Combinatorics Conference</i> (COCOON 2025)<br />
                 CCF-B类会议，Acceptance Rate: 28.3%
@@ -115,7 +115,7 @@
             <li style="margin-bottom: 20px;">
               <p>
                 <b><span style="color: #800080;">SNRWLS: Improve (W)PMS Solver with Weighting Strategies Related to Number of Soft Clauses</span></b><br />
-                Shuhao Chen, <span style="color: #0000FF;">Menghua Jiang</span, Yin Chen*<br />
+                Shuhao Chen, <span style="color: #0000FF;">Menghua Jiang</span>, Yin Chen*<br />
                 <i>The 19th International Symposium on Theoretical Aspects of Software Engineering</i> (TASE 2025)<br />
                 CCF-C类会议，Acceptance Rate: 24.2%
               </p>
@@ -125,7 +125,7 @@
               <p>                
                 <b><span style="color: #800080;">RASLite: Enhancing (W)PMS Solvers Through Dynamic Initial Weight Approach</span></b>
                 <b><a href="https://ieeexplore.ieee.org/abstract/document/10580189" target="_blank">[paper]</a></b>
-                <a href="https://github.com/jmhmaxsat/RASLite">[code]</a><br />
+                <b><a href="https://github.com/jmhmaxsat/RASLite">[code]</a><br /></b>
                 <span style="color: #0000FF;">Menghua Jiang</span>, Yin Chen*<br />
                 <i>2024 27th International Conference on Computer Supported Cooperative Work in Design</i> (CSCWD 2024)<br />
                 CCF-C类会议
