--- a/index.html
+++ b/index.html
@@ -96,7 +96,8 @@
           <ul>
             <li style="margin-bottom: 20px;">
               <p>
-                <b><span style="color: #800080;">Enhancing Local Search for MaxSAT with Deep Differentiation Clause Weighting</span></b><br />
+                <!-- <b><span style="color: #800080;">Enhancing Local Search for MaxSAT with Deep Differentiation Clause Weighting</span></b><br /> -->
+                <b>Enhancing Local Search for MaxSAT with Deep Differentiation Clause Weighting</b><br />
                 <span style="color: #0000FF;">Menghua Jiang</span>, Haokai Gao, Shuhao Chen, Yin Chen*<br />
                 Under Review
               </p>
