--- a/index.html
+++ b/index.html
@@ -96,18 +96,17 @@
           <ul>
             <li style="margin-bottom: 20px;">
               <p>
-                <!-- <b><span style="color: #800080;">Enhancing Local Search for MaxSAT with Deep Differentiation Clause Weighting</span></b><br /> -->
                 <b>Enhancing Local Search for MaxSAT with Deep Differentiation Clause Weighting</b><br />
-                <span style="color: #0000FF;">Menghua Jiang</span>, Haokai Gao, Shuhao Chen, Yin Chen*<br />
+                <b>Menghua Jiang</b>, Haokai Gao, Shuhao Chen, Yin Chen*<br />
                 Under Review
               </p>
             </li>
             
             <li style="margin-bottom: 20px;">
               <p>
-                <b><span style="color: #800080;">Improving Local Search for Weighted Partial MaxSAT by Initializing with Historical Information</span></b>
-                <b><a href="https://github.com/jmhmaxsat/HistLS">[code]</a><br /></b>
-                <span style="color: #0000FF;">Menghua Jiang</span>, Rui Zhang, Yin Chen*<br />
+                Improving Local Search for Weighted Partial MaxSAT by Initializing with Historical Information
+                <a href="https://github.com/jmhmaxsat/HistLS">[code]</a><br />
+                <b>Menghua Jiang</b>, Rui Zhang, Yin Chen*<br />
                 <i>The 31st International Computing and Combinatorics Conference</i> (COCOON 2025)<br />
                 CCF-B类会议，Acceptance Rate: 28.3%
               </p>
@@ -143,8 +142,21 @@
                 CCF-C类会议
               </p>
             </li>
-        </ul>
 
+            
+<!--             
+            <li style="margin-bottom: 20px;">
+              <p>
+                <b><span style="color: #800080;">Heavy Weighting for Potential Important Clauses</span></b>
+                <b><a href="https://link.springer.com/chapter/10.1007/978-3-031-40289-0_21" target="_blank">[paper]</a></b>
+                <b><a href="https://github.com/whyte-yhy/SATLC" target="_blank">[code]</a><br /></b>
+                Hanyi Yu, <span style="color: #0000FF;">Menghua Jiang</span>, Yin Chen*<br />
+                <i>The 16th International Conference on Knowledge Science, Engineering and Management</i> (KSEM 2023)<br />
+                CCF-C类会议
+              </p>
+            </li>
+        </ul>
+--> 
 
 
         </td>
