--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             <li style="margin-bottom: 20px;">
               <p>
                 Improving Local Search for Weighted Partial MaxSAT by Initializing with Historical Information
-                <a href="https://github.com/jmhmaxsat/HistLS">[code]</a><br />
+                <b><a href="https://github.com/jmhmaxsat/HistLS">[code]</a></b><br />
                 <b>Menghua Jiang</b>, Rui Zhang, Yin Chen*<br />
                 <i>The 31st International Computing and Combinatorics Conference</i> (COCOON 2025)<br />
                 CCF-B类会议，Acceptance Rate: 28.3%
@@ -115,7 +115,7 @@
             <li style="margin-bottom: 20px;">
               <p>
                 <b><span style="color: #800080;">SNRWLS: Improve (W)PMS Solver with Weighting Strategies Related to Number of Soft Clauses</span></b><br />
-                Shuhao Chen, <span style="color: #0000FF;">Menghua Jiang</span>, Yin Chen*<br />
+                Shuhao Chen, <u>Menghua Jiang</u>, Yin Chen*<br />
                 <i>The 19th International Symposium on Theoretical Aspects of Software Engineering</i> (TASE 2025)<br />
                 CCF-C类会议，Acceptance Rate: 24.2%
               </p>
@@ -123,10 +123,10 @@
             
             <li style="margin-bottom: 20px;">
               <p>                
-                <b><span style="color: #800080;">RASLite: Enhancing (W)PMS Solvers Through Dynamic Initial Weight Approach</span></b>
+                <b>RASLite: Enhancing (W)PMS Solvers Through Dynamic Initial Weight Approach</b>
                 <b><a href="https://ieeexplore.ieee.org/abstract/document/10580189" target="_blank">[paper]</a></b>
                 <b><a href="https://github.com/jmhmaxsat/RASLite">[code]</a><br /></b>
-                <span style="color: #0000FF;">Menghua Jiang</span>, Yin Chen*<br />
+                <u>Menghua Jiang</u>, Yin Chen*<br />
                 <i>2024 27th International Conference on Computer Supported Cooperative Work in Design</i> (CSCWD 2024)<br />
                 CCF-C类会议
               </p>
@@ -134,10 +134,10 @@
             
             <li style="margin-bottom: 20px;">
               <p>
-                <b><span style="color: #800080;">Heavy Weighting for Potential Important Clauses</span></b>
+                <b>Heavy Weighting for Potential Important Clauses</b>
                 <b><a href="https://link.springer.com/chapter/10.1007/978-3-031-40289-0_21" target="_blank">[paper]</a></b>
                 <b><a href="https://github.com/whyte-yhy/SATLC" target="_blank">[code]</a><br /></b>
-                Hanyi Yu, <span style="color: #0000FF;">Menghua Jiang</span>, Yin Chen*<br />
+                Hanyi Yu, <u>Menghua Jiang</u>, Yin Chen*<br />
                 <i>The 16th International Conference on Knowledge Science, Engineering and Management</i> (KSEM 2023)<br />
                 CCF-C类会议
               </p>
