--- a/index.html
+++ b/index.html
@@ -114,8 +114,8 @@
             
             <li style="margin-bottom: 20px;">
               <p>
-                <b>SNRWLS: Improve (W)PMS Solver with Weighting Strategies Related to Number of Soft Clauses</span></b><br />
-                Shuhao Chen, <u>Menghua Jiang</u>, Yin Chen*<br />
+                <b><span style="color: #800080;">SNRWLS: Improve (W)PMS Solver with Weighting Strategies Related to Number of Soft Clauses</span></b><br />
+                Shuhao Chen, <b><u>Menghua Jiang</u></b>, Yin Chen*<br />
                 <i>The 19th International Symposium on Theoretical Aspects of Software Engineering</i> (TASE 2025)<br />
                 CCF-C类会议，Acceptance Rate: 24.2%
               </p>
