--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             <li style="margin-bottom: 20px;">
               <p>
                 <b><span style="color: #800080;">Enhancing Local Search for MaxSAT with Deep Differentiation Clause Weighting</span></b><br />
-                <u>Menghua Jiang</u>, Haokai Gao, Shuhao Chen, Yin Chen*<br />
+                <b><u>Menghua Jiang</u></b>, Haokai Gao, Shuhao Chen, Yin Chen*<br />
                 Under Review
               </p>
             </li>
@@ -106,7 +106,7 @@
               <p>
                 <b><span style="color: #800080;">Improving Local Search for Weighted Partial MaxSAT by Initializing with Historical Information</span></b>
                 <b><a href="https://github.com/jmhmaxsat/HistLS">[code]</a></b><br />
-                <u>Menghua Jiang</u>, Rui Zhang, Yin Chen*<br />
+                <b><u>Menghua Jiang</u></b>, Rui Zhang, Yin Chen*<br />
                 <i>The 31st International Computing and Combinatorics Conference</i> (COCOON 2025)<br />
                 CCF-B类会议，Acceptance Rate: 28.3%
               </p>
@@ -126,7 +126,7 @@
                 <b><span style="color: #800080;">RASLite: Enhancing (W)PMS Solvers Through Dynamic Initial Weight Approach</span></b>
                 <b><a href="https://ieeexplore.ieee.org/abstract/document/10580189" target="_blank">[paper]</a></b>
                 <b><a href="https://github.com/jmhmaxsat/RASLite">[code]</a><br /></b>
-                <u>Menghua Jiang</u>, Yin Chen*<br />
+                <b><u>Menghua Jiang</u></b>, Yin Chen*<br />
                 <i>2024 27th International Conference on Computer Supported Cooperative Work in Design</i> (CSCWD 2024)<br />
                 CCF-C类会议
               </p>
@@ -137,7 +137,7 @@
                 <b><span style="color: #800080;">Heavy Weighting for Potential Important Clauses</span></b>
                 <b><a href="https://link.springer.com/chapter/10.1007/978-3-031-40289-0_21" target="_blank">[paper]</a></b>
                 <b><a href="https://github.com/whyte-yhy/SATLC" target="_blank">[code]</a><br /></b>
-                Hanyi Yu, <u>Menghua Jiang</u>, Yin Chen*<br />
+                Hanyi Yu, <b><u>Menghua Jiang</u></b>, Yin Chen*<br />
                 <i>The 16th International Conference on Knowledge Science, Engineering and Management</i> (KSEM 2023)<br />
                 CCF-C类会议
               </p>
