--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                 <b><span style="color: #800080;">Improving Local Search for Weighted Partial MaxSAT by Initializing with Historical Information</span></b>
                 <b><a href="https://github.com/jmhmaxsat/HistLS">[code]</a></b><br />
                 <b><u>Menghua Jiang</u></b>, Rui Zhang, Yin Chen*<br />
-                <i>The 31st International Computing and Combinatorics Conference</i> (COCOON 2025)<br />
+                <i>The 31st International Computing and Combinatorics Conference (COCOON 2025)</i><br />
                 CCF-B类会议，Acceptance Rate: 28.3%
               </p>
             </li>
