--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
               <p>
                 <b><span style="color: #800080;">SNRWLS: Improve (W)PMS Solver with Weighting Strategies Related to Number of Soft Clauses</span></b><br />
                 Shuhao Chen, <b><u>Menghua Jiang</u></b>, Yin Chen*<br />
-                <i>The 19th International Symposium on Theoretical Aspects of Software Engineering</i> (TASE 2025)<br />
+                <i>The 19th International Symposium on Theoretical Aspects of Software Engineering (TASE 2025)</i><br />
                 CCF-C类会议，Acceptance Rate: 24.2%
               </p>
             </li>
@@ -127,7 +127,7 @@
                 <b><a href="https://ieeexplore.ieee.org/abstract/document/10580189" target="_blank">[paper]</a></b>
                 <b><a href="https://github.com/jmhmaxsat/RASLite">[code]</a><br /></b>
                 <b><u>Menghua Jiang</u></b>, Yin Chen*<br />
-                <i>2024 27th International Conference on Computer Supported Cooperative Work in Design</i> (CSCWD 2024)<br />
+                <i>2024 27th International Conference on Computer Supported Cooperative Work in Design (CSCWD 2024)</i><br />
                 CCF-C类会议
               </p>
             </li>
@@ -138,7 +138,7 @@
                 <b><a href="https://link.springer.com/chapter/10.1007/978-3-031-40289-0_21" target="_blank">[paper]</a></b>
                 <b><a href="https://github.com/whyte-yhy/SATLC" target="_blank">[code]</a><br /></b>
                 Hanyi Yu, <b><u>Menghua Jiang</u></b>, Yin Chen*<br />
-                <i>The 16th International Conference on Knowledge Science, Engineering and Management</i> (KSEM 2023)<br />
+                <i>The 16th International Conference on Knowledge Science, Engineering and Management (KSEM 2023)</i><br />
                 CCF-C类会议
               </p>
             </li>
@@ -151,7 +151,7 @@
                 <b><a href="https://link.springer.com/chapter/10.1007/978-3-031-40289-0_21" target="_blank">[paper]</a></b>
                 <b><a href="https://github.com/whyte-yhy/SATLC" target="_blank">[code]</a><br /></b>
                 Hanyi Yu, <span style="color: #0000FF;">Menghua Jiang</span>, Yin Chen*<br />
-                <i>The 16th International Conference on Knowledge Science, Engineering and Management</i> (KSEM 2023)<br />
+                <i>The 16th International Conference on Knowledge Science, Engineering and Management (KSEM 2023)</i><br />
                 CCF-C类会议
               </p>
             </li>
