--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
     <link rel="bookmark" href="image/favicon.ico" type="image/x-icon" />
     
     <title>Menghua Jiang's Homepage</title>
+    <style>
+      /* 恢复原有的标题紫色样式 */
+      .paper-title {
+        color: #800080; /* 原来的紫色 */
+      }
+    </style>
   </head>
 
   <body>
@@ -104,7 +110,7 @@
             <!-- DeepDist 论文 -->
             <li class="publication-item">
               <p>
-                <b><span class="paper-title">Enhancing Local Search for MaxSAT with Deep Differentiation Clause Weighting</span></b><br />
+                <b><span style="color: #800080;">Enhancing Local Search for MaxSAT with Deep Differentiation Clause Weighting</span></b><br />
                 <b><u>Menghua Jiang</u></b>, Haokai Gao, Shuhao Chen, Yin Chen*<br />
                 Under Review
               </p>
@@ -113,7 +119,7 @@
             <!-- HistLS 论文 -->
             <li class="publication-item">
               <p>
-                <b><span class="paper-title">Improving Local Search for Weighted Partial MaxSAT by Initializing with Historical Information</span></b>
+                <b><span style="color: #800080;">Improving Local Search for Weighted Partial MaxSAT by Initializing with Historical Information</span></b>
                 <b><a href="https://github.com/jmhmaxsat/HistLS">[code]</a></b><br />
                 <b><u>Menghua Jiang</u></b>, Rui Zhang, Yin Chen*<br />
                 <i>The 31st International Computing and Combinatorics Conference</i> (COCOON 2025)<br />
@@ -124,7 +130,7 @@
             <!-- SNRWLS 论文 -->
             <li class="publication-item">
               <p>
-                <b><span class="paper-title">SNRWLS: Improve (W)PMS Solver with Weighting Strategies Related to Number of Soft Clauses</span></b><br />
+                <b><span style="color: #800080;">SNRWLS: Improve (W)PMS Solver with Weighting Strategies Related to Number of Soft Clauses</span></b><br />
                 Shuhao Chen, <b><u>Menghua Jiang</u></b>, Yin Chen*<br />
                 <i>The 19th International Symposium on Theoretical Aspects of Software Engineering</i> (TASE 2025)<br />
                 CCF-C, Acceptance Rate: 24.2%
@@ -134,7 +140,7 @@
             <!-- RASLite 论文 -->
             <li class="publication-item">
               <p>                
-                <b><span class="paper-title">RASLite: Enhancing (W)PMS Solvers Through Dynamic Initial Weight Approach</span></b>
+                <b><span style="color: #800080;">RASLite: Enhancing (W)PMS Solvers Through Dynamic Initial Weight Approach</span></b>
                 <b><a href="https://ieeexplore.ieee.org/abstract/document/10580189" target="_blank">[paper]</a></b>
                 <b><a href="https://github.com/jmhmaxsat/RASLite">[code]</a><br /></b>
                 <b><u>Menghua Jiang</u></b>, Yin Chen*<br />
@@ -146,7 +152,7 @@
             <!-- SATLC 论文 -->
             <li class="publication-item">
               <p>
-                <b><span class="paper-title">Heavy Weighting for Potential Important Clauses</span></b>
+                <b><span style="color: #800080;">Heavy Weighting for Potential Important Clauses</span></b>
                 <b><a href="https://link.springer.com/chapter/10.1007/978-3-031-40289-0_21" target="_blank">[paper]</a></b>
                 <b><a href="https://github.com/whyte-yhy/SATLC" target="_blank">[code]</a><br /></b>
                 Hanyi Yu, <b><u>Menghua Jiang</u></b>, Yin Chen*<br />
