--- a/index.html
+++ b/index.html
@@ -141,8 +141,8 @@
             <li class="publication-item">
               <p>                
                 <b><span style="color: #800080;">RASLite: Enhancing (W)PMS Solvers Through Dynamic Initial Weight Approach</span></b>
-                <b><a href="https://ieeexplore.ieee.org/abstract/document/10580189" target="_blank">[paper]</a></b>
-                <b><a href="https://github.com/jmhmaxsat/RASLite">[code]</a><br /></b>
+                <a href="https://ieeexplore.ieee.org/abstract/document/10580189" target="_blank">[paper]</a>
+                <a href="https://github.com/jmhmaxsat/RASLite">[code]</a><br />
                 <b><u>Menghua Jiang</u></b>, Yin Chen*<br />
                 <i>2024 27th International Conference on Computer Supported Cooperative Work in Design</i> (CSCWD 2024)<br />
                 CCF-C
