--- a/index.html
+++ b/index.html
@@ -141,8 +141,8 @@
             <li class="publication-item">
               <p>                
                 <b><span style="color: #800080;">RASLite: Enhancing (W)PMS Solvers Through Dynamic Initial Weight Approach</span></b>
-                <a href="https://ieeexplore.ieee.org/abstract/document/10580189" target="_blank">[paper]</a>
-                <a href="https://github.com/jmhmaxsat/RASLite">[code]</a><br />
+                <b><a href="https://ieeexplore.ieee.org/abstract/document/10580189" target="_blank">[paper]</a></b>
+                <b><a href="https://github.com/jmhmaxsat/RASLite">[code]</a></b><br />
                 <b><u>Menghua Jiang</u></b>, Yin Chen*<br />
                 <i>2024 27th International Conference on Computer Supported Cooperative Work in Design</i> (CSCWD 2024)<br />
                 CCF-C
@@ -154,7 +154,7 @@
               <p>
                 <b><span style="color: #800080;">Heavy Weighting for Potential Important Clauses</span></b>
                 <b><a href="https://link.springer.com/chapter/10.1007/978-3-031-40289-0_21" target="_blank">[paper]</a></b>
-                <b><a href="https://github.com/whyte-yhy/SATLC" target="_blank">[code]</a><br /></b>
+                <b><a href="https://github.com/whyte-yhy/SATLC" target="_blank">[code]</a></b><br />
                 Hanyi Yu, <b><u>Menghua Jiang</u></b>, Yin Chen*<br />
                 <i>The 16th International Conference on Knowledge Science, Engineering and Management</i> (KSEM 2023)<br />
                 CCF-C
