--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                 <b><a href="https://github.com/whyte-yhy/SATLC" target="_blank">[code]</a></b><br />
                 Hanyi Yu, <b><u>Menghua Jiang</u></b>, Yin Chen*<br />
                 <i>The 16th International Conference on Knowledge Science, Engineering and Management</i> (KSEM 2023)<br />
-                CCF-C
+                <span style="background-color: #f0fff0; color: #228b22; font-weight: bold">CCF-C</span>
               </p>
             </li>
           </ul>
