--- a/index.html
+++ b/index.html
@@ -122,8 +122,7 @@
                 <b><span style="color: #800080;">Improving Local Search for Weighted Partial MaxSAT by Initializing with Historical Information</span></b>
                 <b><a href="https://github.com/jmhmaxsat/HistLS">[code]</a></b><br />
                 <b><u>Menghua Jiang</u></b>, Rui Zhang, Yin Chen*<br />
-                <i>The 31st International Computing and Combinatorics Conference</i> (COCOON 2025)<br />
-                CCF-B, Acceptance Rate: 28.3%
+                <i>The 31st International Computing and Combinatorics Conference</i> (COCOON 2025) <span style="background-color: #fff2cc; color: #b35900; font-weight: bold">CCF-B, Acceptance Rate: 28.3%</span> <br />
               </p>
             </li>
             
@@ -156,8 +155,7 @@
                 <b><a href="https://link.springer.com/chapter/10.1007/978-3-031-40289-0_21" target="_blank">[paper]</a></b>
                 <b><a href="https://github.com/whyte-yhy/SATLC" target="_blank">[code]</a></b><br />
                 Hanyi Yu, <b><u>Menghua Jiang</u></b>, Yin Chen*<br />
-                <i>The 16th International Conference on Knowledge Science, Engineering and Management</i> (KSEM 2023)<br />
-                <span style="background-color: #f0fff0; color: #228b22; font-weight: bold">CCF-C</span>
+                <i>The 16th International Conference on Knowledge Science, Engineering and Management</i> (KSEM 2023) <span style="background-color: #f0fff0; color: #228b22; font-weight: bold">CCF-C</span> <br />   
               </p>
             </li>
           </ul>
