--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                 <b><a href="https://link.springer.com/chapter/10.1007/978-3-031-40289-0_21" target="_blank">[paper]</a></b>
                 <b><a href="https://github.com/whyte-yhy/SATLC" target="_blank">[code]</a></b><br />
                 Hanyi Yu, <b><u>Menghua Jiang</u></b>, Yin Chen*<br />
-                <i>The 16th International Conference on Knowledge Science, Engineering and Management</i> (KSEM 2023) &nbsp<span style="background-color: #dddddd; color: #228b22; font-weight: bold">CCF-C</span> <br />   
+                <i>The 16th International Conference on Knowledge Science, Engineering and Management</i> (KSEM 2023) &nbsp<span style="background-color: #228b22; color: #ffffff; font-weight: bold; padding: 2px 8px; border-radius: 4px">CCF-C</span> <br />   
               </p>
             </li>
           </ul>
