--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
               <p>
                 <b><span style="color: #800080;">SNRWLS: Improve (W)PMS Solver with Weighting Strategies Related to Number of Soft Clauses</span></b><br />
                 Shuhao Chen, <b><u>Menghua Jiang</u></b>, Yin Chen*<br />
-                <i>The 19th International Symposium on Theoretical Aspects of Software Engineering</i> (TASE 2025)<br />
+                <i>The 19th International Symposium on Theoretical Aspects of Software Engineering</i> (TASE 2025)
                 &nbsp<span style="background-color: #228b22; color: #ffffff; font-weight: bold; padding: 2px 8px; border-radius: 4px">CCF-C, Acceptance Rate: 24.2%</span> <br />  
               </p>
             </li>
@@ -144,7 +144,7 @@
                 <b><a href="https://ieeexplore.ieee.org/abstract/document/10580189" target="_blank">[paper]</a></b>
                 <b><a href="https://github.com/jmhmaxsat/RASLite">[code]</a></b><br />
                 <b><u>Menghua Jiang</u></b>, Yin Chen*<br />
-                <i>2024 27th International Conference on Computer Supported Cooperative Work in Design</i> (CSCWD 2024)<br />
+                <i>2024 27th International Conference on Computer Supported Cooperative Work in Design</i> (CSCWD 2024)
                 &nbsp<span style="background-color: #228b22; color: #ffffff; font-weight: bold; padding: 2px 8px; border-radius: 4px">CCF-C</span> <br />  
               </p>
             </li>
