--- a/index.html
+++ b/index.html
@@ -123,7 +123,8 @@
                 <b><a href="https://github.com/jmhmaxsat/HistLS">[code]</a></b><br />
                 <b><u>Menghua Jiang</u></b>, Rui Zhang, Yin Chen*<br />
                 <i>The 31st International Computing and Combinatorics Conference</i> (COCOON 2025) 
-                &nbsp<span style="background-color: #fb8c00; color: #ffffff; font-weight: bold; padding: 2px 8px; border-radius: 4px">CCF-B, Acceptance Rate: 28.3%</span> <br /> 
+                &nbsp<span style="background-color: #fb8c00; color: #ffffff; font-weight: bold; padding: 2px 8px; border-radius: 4px">CCF-B</span> <br /> 
+                Acceptance Rate: 28.3%
               </p>
             </li>
             
@@ -133,7 +134,8 @@
                 <b><span style="color: #800080;">SNRWLS: Improve (W)PMS Solver with Weighting Strategies Related to Number of Soft Clauses</span></b><br />
                 Shuhao Chen, <b><u>Menghua Jiang</u></b>, Yin Chen*<br />
                 <i>The 19th International Symposium on Theoretical Aspects of Software Engineering</i> (TASE 2025)
-                &nbsp<span style="background-color: #228b22; color: #ffffff; font-weight: bold; padding: 2px 8px; border-radius: 4px">CCF-C, Acceptance Rate: 24.2%</span> <br />  
+                &nbsp<span style="background-color: #228b22; color: #ffffff; font-weight: bold; padding: 2px 8px; border-radius: 4px">CCF-C</span> <br />  
+                Acceptance Rate: 24.2%
               </p>
             </li>
             
