--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                 <b><u>Menghua Jiang</u></b>, Rui Zhang, Yin Chen*<br />
                 <i>The 31st International Computing and Combinatorics Conference</i> (COCOON 2025) 
                 &nbsp<span style="background-color: #fb8c00; color: #ffffff; font-weight: bold; padding: 2px 8px; border-radius: 4px">CCF-B</span> <br /> 
-                Acceptance Rate: 28.3%
+                <span style="background-color: #f0f0f0; padding: 2px 6px; border-radius: 2px;">Acceptance Rate: 28.3%</span>
               </p>
             </li>
             
@@ -135,7 +135,7 @@
                 Shuhao Chen, <b><u>Menghua Jiang</u></b>, Yin Chen*<br />
                 <i>The 19th International Symposium on Theoretical Aspects of Software Engineering</i> (TASE 2025)
                 &nbsp<span style="background-color: #228b22; color: #ffffff; font-weight: bold; padding: 2px 8px; border-radius: 4px">CCF-C</span> <br />  
-                Acceptance Rate: 24.2%
+                <span style="background-color: #f0f0f0; padding: 2px 6px; border-radius: 2px;">Acceptance Rate: 24.2%</span>
               </p>
             </li>
             
