--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                 <b><a href="https://github.com/jmhmaxsat/HistLS">[code]</a></b><br />
                 <b><u>Menghua Jiang</u></b>, Rui Zhang, Yin Chen*<br />
                 <i>The 31st International Computing and Combinatorics Conference</i> (COCOON 2025) <br />
-                &nbsp<span style="background-color: #fb8c00; color: #ffffff; font-weight: bold; padding: 2px 8px; border-radius: 4px">CCF-B</span>  
+                <span style="background-color: #fb8c00; color: #ffffff; font-weight: bold; padding: 2px 8px; border-radius: 4px">CCF-B</span>  
                 &nbsp<span style="background-color: #f0f0f0; padding: 2px 6px; border-radius: 2px;">Acceptance Rate: 28.3%</span>
               </p>
             </li>
@@ -134,7 +134,7 @@
                 <b><span style="color: #800080;">SNRWLS: Improve (W)PMS Solver with Weighting Strategies Related to Number of Soft Clauses</span></b><br />
                 Shuhao Chen, <b><u>Menghua Jiang</u></b>, Yin Chen*<br />
                 <i>The 19th International Symposium on Theoretical Aspects of Software Engineering</i> (TASE 2025) <br />
-                &nbsp<span style="background-color: #228b22; color: #ffffff; font-weight: bold; padding: 2px 8px; border-radius: 4px">CCF-C</span>   
+                <span style="background-color: #228b22; color: #ffffff; font-weight: bold; padding: 2px 8px; border-radius: 4px">CCF-C</span>   
                 &nbsp<span style="background-color: #f0f0f0; padding: 2px 6px; border-radius: 2px;">Acceptance Rate: 24.2%</span>
               </p>
             </li>
@@ -147,7 +147,7 @@
                 <b><a href="https://github.com/jmhmaxsat/RASLite">[code]</a></b><br />
                 <b><u>Menghua Jiang</u></b>, Yin Chen*<br />
                 <i>2024 27th International Conference on Computer Supported Cooperative Work in Design</i> (CSCWD 2024) <br />
-                &nbsp<span style="background-color: #228b22; color: #ffffff; font-weight: bold; padding: 2px 8px; border-radius: 4px">CCF-C</span>   
+                <span style="background-color: #228b22; color: #ffffff; font-weight: bold; padding: 2px 8px; border-radius: 4px">CCF-C</span>   
               </p>
             </li>
             
@@ -159,7 +159,7 @@
                 <b><a href="https://github.com/whyte-yhy/SATLC" target="_blank">[code]</a></b><br />
                 Hanyi Yu, <b><u>Menghua Jiang</u></b>, Yin Chen*<br />
                 <i>The 16th International Conference on Knowledge Science, Engineering and Management</i> (KSEM 2023) <br />
-                &nbsp<span style="background-color: #228b22; color: #ffffff; font-weight: bold; padding: 2px 8px; border-radius: 4px">CCF-C</span>    
+                <span style="background-color: #228b22; color: #ffffff; font-weight: bold; padding: 2px 8px; border-radius: 4px">CCF-C</span>    
               </p>
             </li>
           </ul>
