--- a/index.html
+++ b/index.html
@@ -110,7 +110,8 @@
             <!-- DeepDist 论文 -->
             <li style="margin-bottom: 20px;">
               <p>
-                <b><span style="color: #800080;">Enhancing Local Search for MaxSAT with Deep Differentiation Clause Weighting</span></b><br />
+                <b><span style="color: #800080;">Enhancing Local Search for MaxSAT with Deep Differentiation Clause Weighting</span></b>
+                <b><a href="https://github.com/jmhmaxsat/DeepDist">[code]</a></b><br />
                 <b><u>Menghua Jiang</u></b>, Haokai Gao, Shuhao Chen, Yin Chen*<br />
                 Under Review
               </p>
