--- a/index.html
+++ b/index.html
@@ -156,9 +156,9 @@
             <!-- SATLC 论文 -->
             <li style="margin-bottom: 20px;">
               <p>
-                <b><span style="color: #800080;">Heavy Weighting for Potential Important Clauses</span></b>
-                <b><a href="https://link.springer.com/chapter/10.1007/978-3-031-40289-0_21" target="_blank">[paper]</a></b>
-                <b><a href="https://github.com/whyte-yhy/SATLC" target="_blank">[code]</a></b><br />
+                <span style="color: #800080;">Heavy Weighting for Potential Important Clauses</span>
+                <a href="https://link.springer.com/chapter/10.1007/978-3-031-40289-0_21" target="_blank">[paper]</a>
+                <a href="https://github.com/whyte-yhy/SATLC" target="_blank">[code]</a><br />
                 Hanyi Yu, <b><u>Menghua Jiang</u></b>, Yin Chen*<br />
                 <i>The 16th International Conference on Knowledge Science, Engineering and Management (KSEM 2023)</i> <br />
                 <!-- <span style="background-color: #f0f0f0; padding: 2px 6px; border-radius: 2px;">CCF-C</span>
